<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    tools:ignore="MissingPrefix"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/_5sdp">

    <RelativeLayout
        style="@style/match_parent_style"
        >

        <ScrollView style="@style/match_parent_style">

            <LinearLayout
                android:id="@+id/layout_main"
                style="@style/match_parent_style"
                android:layout_marginLeft="@dimen/_30sdp"
                android:layout_marginRight="@dimen/_30sdp"
                android:layout_marginBottom="@dimen/_30sdp"
                android:paddingBottom="@dimen/_200sdp"
                android:orientation="vertical">

                <LinearLayout
                    style="@style/match_wrap_style"
                    android:layout_gravity="center"
                    android:layout_marginTop="-10dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="@dimen/_10sdp"
                        android:gravity="center">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_45sdp"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="20dp">

                            <EditText
                                android:id="@+id/tie_username"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_marginTop="15dp"
                                android:imeOptions="actionDone|flagNoExtractUi"
                                android:background="@drawable/broken_border"
                                android:hint="Enter the username"
                                android:nextFocusDown="@+id/tie_password"
                                android:singleLine="true"
                                android:maxLength="10"
                                android:paddingLeft="@dimen/_10sdp"
                                android:textColor="@color/color_gray"
                                android:textColorHint="@color/color_gray"
                                android:textSize="@dimen/_10sdp" />

                            <TextView
                                android:id="@+id/txt_username"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="10dp"
                                android:layout_marginTop="7dp"
                                android:background="#F1F1F1"
                                android:text=" Username "
                                android:textSize="@dimen/_10sdp"
                                android:textColor="@color/colorPrimary"
                                android:textStyle="bold" />

                        </RelativeLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"

                        android:gravity="center">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_45sdp"
                          >
                            <com.google.android.material.textfield.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="@dimen/_45sdp"
                                android:layout_marginLeft="20dp"
                                android:layout_marginRight="20dp"
                                android:layout_marginTop="@dimen/_5sdp"
                                android:layout_marginBottom="@dimen/_5sdp"
                                android:textColorHint="#B9B8B8"
                                app:hintEnabled="false"
                                app:passwordToggleEnabled="true">

                            <EditText
                                android:id="@+id/tie_password"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:nextFocusDown="@+id/tie_serverurl"
                                android:background="@drawable/broken_border"
                                android:hint="Enter the password"
                                android:imeOptions="actionDone|flagNoExtractUi"
                                android:maxLength="10"
                                android:singleLine="true"
                                android:paddingLeft="@dimen/_10sdp"
                                android:textColor="@color/color_gray"
                                android:textColorHint="@color/color_gray"
                                android:textSize="@dimen/_10sdp"

                                />
                            </com.google.android.material.textfield.TextInputLayout>>

                            <TextView
                                android:id="@+id/txt_password"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="30dp"
                                android:background="#F1F1F1"
                                android:textSize="@dimen/_10sdp"
                                android:text=" Password "
                                android:textColor="@color/colorPrimary"
                                android:textStyle="bold" />
                        </RelativeLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="@dimen/_10sdp"
                        android:gravity="center">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_45sdp"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="20dp">

                            <EditText
                                android:id="@+id/tie_serverurl"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_marginTop="15dp"
                                android:background="@drawable/broken_border"
                                android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890@./:"
                                android:drawableRight="@drawable/ic_arrow_down"
                                android:hint="Enter the server url"
                                android:imeOptions="actionDone|flagNoExtractUi"
                                android:singleLine="true"
                                android:inputType="textFilter"
                                android:maxLength="45"
                                android:paddingLeft="@dimen/_10sdp"
                                android:textColor="@color/color_gray"
                                android:textColorHint="@color/color_gray"
                                android:textSize="@dimen/_10sdp"

                                />

                            <TextView
                                android:id="@+id/txt_server_url"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="10dp"
                                android:layout_marginTop="7dp"
                                android:background="#F1F1F1"
                                android:text=" Server Url "
                                android:textSize="@dimen/_10sdp"
                                android:textColor="@color/colorPrimary"
                                android:textStyle="bold" />
                        </RelativeLayout>

                    </LinearLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <Button
                            android:id="@+id/btnLogin"
                            style="@style/btn_common_Login"
                            android:layout_centerHorizontal="true"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="@dimen/_35sdp"
                            android:layout_marginTop="@dimen/_20sdp"
                            android:layout_marginRight="@dimen/_35sdp"
                            android:text="@string/lbl_login" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:orientation="vertical"
                            android:paddingRight="@dimen/_1sdp">

                            <TextView
                                android:id="@+id/tv_forgot_password"
                                style="@style/textview_label_new1"
                                android:text="@string/msg_forget_password"
                                android:textAlignment="textEnd"
                                android:textColor="@color/color_blue"
                                android:textSize="@dimen/_8sdp" />

                            <TextView
                                android:id="@+id/tv_reg"
                                style="@style/textview_label_new1"
                                android:text="@string/new_user_register_now"
                                fontPath="fonts/HelveticaBold.otf"
                                android:textAlignment="textEnd"
                                android:textSize="@dimen/_8sdp" />
                        </LinearLayout>

                    </RelativeLayout>
                </LinearLayout>

            </LinearLayout>

        </ScrollView>

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_20sdp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_marginBottom="@dimen/_2sdp"
            android:background="@color/colorWhite"
            android:src="@drawable/emco_logo_with_name"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:visibility="gone"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="@dimen/_2sdp"
            android:layout_marginRight="@dimen/_40sdp"
            android:background="@color/colorWhite"
            android:orientation="vertical">

            <TextView
                style="@style/match_wrap_style"
                android:text="@string/lbl_2017_ags"
                fontPath="fonts/HelveticaRegular.otf"
                android:textAlignment="center"
                android:textSize="@dimen/_6sdp" />

            <TextView
                style="@style/match_wrap_style"
                android:text="@string/lbl_version"
                android:textAlignment="center"
                fontPath="fonts/HelveticaRegular.otf"
                android:textSize="@dimen/_5sdp" />
        </LinearLayout>

    </RelativeLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:visibility="gone"
        android:layout_margin="@dimen/_14sdp"
        android:src="@drawable/arrow" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>
