...
    <string name="lbl_alert_rc_not_available">Receive Complaint details not available</string>
    <string name="lbl_okay">Okay</string>
    <string name="lbl_choose">Choose</string>
    <string name="barcode_error">"Error reading barcode: %1$s"</string>

    <string name="action_home">Home</string>
    <string name="action_logout">Logout</string>

    <!--common message labels-->
    <string name="msg_no_data_found_in_local_db">No Data found. Please check your internet connection</string>

    <!-- Bottom navigation titles when tab item is selected -->

...
    <string name="lbl_receive_complaints">Receive Complaints</string>
    <string name="lbl_view_complaint_status">View Complaint Status</string>
    <string name="lbl_pending_client_signature">Pending Client Signature</string>
    <string name="lbl_dashboard">Dashboard</string>

    <!--strings for google vision-->
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>

    <!--login and sing up labels-->
    <string name="lbl_username">Username</string>
...
