...
    <io.github.yavski.fabspeeddial.FabSpeedDial
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        app:fabGravity="bottom_end"
        app:fabMenu="@menu/fab_menu_rc"
        android:id="@+id/fab_menu"
        app:fabDrawable="@drawable/option"
        app:miniFabBackgroundTint="@color/colorPrimary"
        app:miniFabDrawableTint="@color/colorWhite"
        app:miniFabTitleTextColor="@color/colorPrimary" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
