...
                android:gravity="center"
                android:background="@color/colorPrimary"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/tv_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:visibility="invisible"
                    android:background="@color/colorWhite"
                    android:gravity="center"
...
